@@ -4,6 +4,8 @@
   once to avoid overloading it
 * segway: increase robustness by adding a ulimit wrapper script to
   explicitly limit the memory used for each job and erase temporary files
+* segway: add --old-directory option for identify mode recovery of a
+  previous partial run
 * segway-task: bugfix: won't throw a nested exception when temporary
   files were not created
 
